# domino

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  commit-msg.txt  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
cascade/: __init__.py  cli.py
cascade/agents/: base.py  llm.py
cascade/api/: app.py
cascade/core/: __init__.py  chain.py  engine.py  node.py  scenario.py
cascade/data/: aggregator.py
cascade/data/providers/: base.py  commodities.py  economics.py  news.py
docs/: contributing.md  launch-plan.md  launch-posts.md  quick-posts.md
examples/: quick_start.py
scenarios/: ai_displacement.json  climate_food.json  crypto_crash.json  dollar_crisis.json  energy_transition.json  hormuz_strait.json  pandemic_v2.json  taiwan_chips.json  turkey_earthquake.json
tests/: audit.py  test_engine.py
web/: next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx  scenario-data.ts
