[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domino-engine"
version = "0.1.0"
description = "From global events to your kitchen table. A cascading impact simulation engine."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["cascade", "simulation", "crisis", "economic", "impact", "domino", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
ai = [
    "ollama>=0.4.0",
    "openai>=1.50.0",
]
all = [
    "domino-engine[ai]",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[project.scripts]
domino = "cascade.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cascade"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
